<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Ovni</string>
    <string name="button">Connexion</string>
    <string name="connexion">Connexion</string>
    <string name="jouer">Jouer</string>
    <string name="inscription">Inscription</string>
    <string name="inscrire">Inscription</string>
    <string name="retour">Retour</string>
    <string name="deconnexion">Déconnexion</string>
    <string name="nom">Nom</string>
    <string name="prenom">Prénom</string>
    <string name="date_naissance">Date de naissance</string>
    <string name="sexe">Sexe</string>
    <string name="email">E-mail</string>
    <string name="mdp">Mot de passe</string>
    <string name="regle">Règles</string>
    <string name="rules">Niveau 1 : Pierre - Papier - Ciseaux\nUne victoire = 3 points, une défaite = -1 points \n\n- La pierre bat la paire de ciseaux\n- La paire de ciseaux bat la feuille\n- La feuille bat la pierre\n\nNiveau 2 : Pierre - Papier - Ciseaux - Puits  \nUne victoire = 5 points, une défaite = -2 points\n\n- La pierre bat la paire de ciseaux\n- La feuille bat la pierre\n- La feuille bat le puits\n- Le puits bat la paire de cieseaux\n- Le puits bat la pierre\n\nNiveau 3 : Puissance 7 : Pierre - Papier - Ciseaux - Eau - Feu - Air - Eponge\n\n- La pierre éteint le feu, écrase les ciseaux et l\'éponge\n- Le feu fait fondre les ciseaux, brûle l\'éponge et le papier\n- Les ciseaux coupent l\'éponge, le papier et son claquement résonne dans l\'air\n- L\'éponge mouille le papier, contient des trous d\'air et absorbe l\'eau\n- Le papier évente l\'air, flotte sur l\'eau et recouvre la pierre\n- L\'air évapore l\'eau, érode la pierre et éteint le feu\n- l\'eau érode la pierre, éteint le feu et rouille les ciseaux\n</string>
    <string name="puissance_7">Puissance 7</string>
    <string name="variant_puit">Variant puit</string>

</resources>