<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Puissance11"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/connexion"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:background="@drawable/custom_button_clicked"
        android:fontFamily="@font/baloo"
        android:text="@string/connexion"
        android:textAllCaps="false"
        android:textColor="#FFF8E1"
        android:textColorHint="#000000"
        android:textColorLink="#D34242"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.933"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/deconnexion"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:background="@drawable/custom_button_clicked"
        android:fontFamily="@font/baloo"
        android:text="@string/deconnexion"
        android:textAllCaps="false"
        android:textColor="#E8E4CE"
        android:textColorHint="#000000"
        android:textColorLink="#D34242"
        android:textSize="34sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.933"
        tools:ignore="DuplicateSpeakableTextCheck"
        tools:visibility="invisible" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/jouer"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:background="@drawable/custom_button_clicked"
        android:color="@color/button_default"
        android:fontFamily="@font/baloo"
        android:text="@string/jouer"
        android:textAllCaps="false"
        android:textColor="#FFF8E1"
        android:textColorHint="#000000"
        android:textColorLink="#D34242"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/connexion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.911" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/cancel"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:background="@drawable/custom_button_clicked"
        android:color="@color/button_default"
        android:fontFamily="@font/baloo"
        android:text="@string/inscription"
        android:textAllCaps="false"
        android:textColor="#FFF8E1"
        android:textColorHint="#000000"
        android:textColorLink="#D34242"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.871" />

    <pl.droidsonroids.gif.GifImageView
        android:layout_width="264dp"
        android:layout_height="175dp"
        android:src="@drawable/ovnigif2"
        app:layout_constraintBottom_toTopOf="@+id/jouer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>