<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Puissance11"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonInscrire"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/custom_button_clicked"
        android:color="@color/button_default"
        android:fontFamily="@font/baloo"
        android:text="@string/inscrire"
        android:textAllCaps="false"
        android:textColor="#FFF8E1"
        android:textColorHint="#000000"
        android:textColorLink="#D34242"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline7" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/editEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toBottomOf="@id/SV">

        <RadioButton
            android:id="@+id/radioHomme"
            android:layout_width="134dp"
            android:layout_height="match_parent"
            android:text="Homme"
            android:textColor="#000000"
            android:textColorHint="#000000"
            android:textColorLink="#D34242"
            android:textSize="26sp"
            android:textStyle="bold"
            tools:ignore="TouchTargetSizeCheck" />

        <RadioButton
            android:id="@+id/radioFemme"
            android:layout_width="130dp"
            android:layout_height="match_parent"
            android:text="Femme"
            android:textColor="#000000"
            android:textColorHint="#000000"
            android:textColorLink="#D34242"
            android:textSize="26sp"
            android:textStyle="bold"
            tools:ignore="TouchTargetSizeCheck" />
    </RadioGroup>

    <EditText
        android:id="@+id/editNom"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:ems="10"
        android:hint="Nom"
        android:inputType="textPersonName"
        android:textColor="#FFF8E1"
        android:textColorHint="#70000000"
        android:textColorLink="#D34242"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editPrenom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editPrenom"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:ems="10"
        android:hint="Prenom"
        android:inputType="textPersonName"
        android:textColor="#FFF8E1"
        android:textColorHint="#70000000"
        android:textColorLink="#D34242"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/SV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toBottomOf="@+id/editNom"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/editEmail"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:ems="10"
        android:hint="xxx@yyy.com"
        android:inputType="textEmailAddress"
        android:textColor="#FFF8E1"
        android:textColorHint="#70000000"
        android:textColorLink="#D34242"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editMdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/editMdp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:ems="10"
        android:hint="********"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColor="#FFF8E1"
        android:textColorHint="#70000000"
        android:textColorLink="#D34242"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toBottomOf="@+id/editEmail"
        tools:ignore="SpeakableTextPresentCheck" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/cancel"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/custom_button_clicked"
        android:color="@color/button_default"
        android:fontFamily="@font/baloo"
        android:text="@string/retour"
        android:textAllCaps="false"
        android:textColor="#FFF8E1"
        android:textColorHint="#000000"
        android:textColorLink="#D34242"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline8" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.35" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autoSizePresetSizes="@array/autosize_text_sizes"
        android:autoSizeTextType="uniform"
        android:gravity="center"
        android:text="@string/nom"
        android:textColor="#FFF8E1"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/editNom"
        app:layout_constraintEnd_toStartOf="@+id/editNom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editNom" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autoSizePresetSizes="@array/autosize_text_sizes"
        android:autoSizeTextType="uniform"
        android:gravity="center"
        android:text="@string/prenom"
        android:textColor="#FFF8E1"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/editPrenom"
        app:layout_constraintEnd_toStartOf="@+id/editPrenom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editPrenom" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autoSizePresetSizes="@array/autosize_text_sizes"
        android:autoSizeTextType="uniform"
        android:gravity="center"
        android:text="@string/date_naissance"
        android:textColor="#FFF8E1"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autoSizePresetSizes="@array/autosize_text_sizes"
        android:autoSizeTextType="uniform"
        android:gravity="center"
        android:text="@string/sexe"
        android:textColor="#FFF8E1"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/radioGroup"
        app:layout_constraintEnd_toStartOf="@+id/radioGroup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/radioGroup" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autoSizePresetSizes="@array/autosize_text_sizes"
        android:autoSizeTextType="uniform"
        android:gravity="center"
        android:text="@string/email"
        android:textColor="#FFF8E1"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/editEmail"
        app:layout_constraintEnd_toStartOf="@+id/editEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editEmail" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autoSizePresetSizes="@array/autosize_text_sizes"
        android:autoSizeTextType="uniform"
        android:gravity="center"
        android:text="@string/mdp"
        android:textColor="#FFF8E1"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/editMdp"
        app:layout_constraintEnd_toStartOf="@+id/editMdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editMdp" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="left"
        app:constraint_referenced_ids="guideline6"
        tools:layout_editor_absoluteX="144dp" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85" />

    <ScrollView
        android:id="@+id/SV"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toBottomOf="@+id/editPrenom">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <CalendarView
                android:id="@+id/calendarView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>

    <EditText
        android:id="@+id/edittextDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteY="606dp" />

</androidx.constraintlayout.widget.ConstraintLayout>