<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Puissance11"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/jouer1"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:background="@drawable/custom_button_clicked"
        android:color="@color/button_default"
        android:fontFamily="@font/baloo"
        android:text="@string/jouer"
        android:textAllCaps="false"
        android:textColor="#FFF8E1"
        android:textColorHint="#000000"
        android:textColorLink="#D34242"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/jouer3"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:background="@drawable/custom_button_clicked"
        android:color="@color/button_default"
        android:fontFamily="@font/baloo"
        android:text="@string/puissance_7"
        android:textAllCaps="false"
        android:textColor="#FFF8E1"
        android:textColorHint="#000000"
        android:textColorLink="#D34242"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.777" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/cancel2"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/custom_button_clicked"
        android:color="@color/button_default"
        android:fontFamily="@font/baloo"
        android:text="@string/retour"
        android:textAllCaps="false"
        android:textColor="#FFF8E1"
        android:textColorHint="#000000"
        android:textColorLink="#D34242"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/jouer3"
        app:layout_constraintVertical_bias="0.379" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/jouer2"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:background="@drawable/custom_button_clicked"
        android:color="@color/button_default"
        android:fontFamily="@font/baloo"
        android:text="@string/variant_puit"
        android:textAllCaps="false"
        android:textColor="#FFF8E1"
        android:textColorHint="#000000"
        android:textColorLink="#D34242"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.639" />

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/ovni"
        android:layout_width="264dp"
        android:layout_height="175dp"
        android:src="@drawable/ovnigif2"
        app:layout_constraintBottom_toTopOf="@+id/jouer1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/textViewConnexion1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FFF8E1"
        android:textColorLink="#D34242"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.085"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.977" />

    <TextView
        android:id="@+id/textViewRang1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FFF8E1"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <TextView
        android:id="@+id/textViewScore1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:textColor="#FFF8E1"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textViewRang1"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/textViewRang1"
        app:layout_constraintTop_toBottomOf="@+id/textViewRang1"
        app:layout_constraintVertical_bias="0.02" />


</androidx.constraintlayout.widget.ConstraintLayout>